--- a/plugin.xml
+++ b/plugin.xml
@@ -42,14 +42,17 @@
       <resource-file src="src/ios/res/OZLocalizationBundle.bundle"  />
       <resource-file src="src/ios/res/OZResourceBundle.bundle" />
       <!-- iOS platform frameworks -->
-      <!-- <framework src="Alamofire" type="podspec" spec="4.9.0" /> -->
+      <!-- <framework src="Alamofire" type="podspec" spec="4.9.0" /> 
+	  <framework src="SVProgressHUD" type="podspec" spec="2.2.5"/>
+	  <framework src="Firebase/Core" type="podspec" spec="6.21.0"/>
+	  -->
 
 		<framework src="Alamofire" type="podspec" spec="4.9.0" /> 
 		<framework src="DeviceKit" type="podspec" spec="2.1.0"/>
-		<framework src="Firebase/Core" type="podspec" spec="6.21.0"/>
+		
 		<framework src="Firebase/MLVision" type="podspec" spec="5.2.0"/>
 		<framework src="Firebase/MLVisionFaceModel" type="podspec" spec="5.2.0"/>
-		<framework src="SVProgressHUD" type="podspec" spec="2.2.5"/>
+		
 		
       <podspec>
          <config>
