--- a/plugin.xml
+++ b/plugin.xml
@@ -56,24 +56,9 @@
 		<framework src="Firebase/Core" type="podspec" spec=""/>
 	  -->
 
-		<podspec>
-         <config>
-           <source url="https://github.com/CocoaPods/Specs.git"/>
-         </config>
-         <pods use-frameworks="true">
-           <pod name="Alamofire" spec="4.9.0" />
-           <pod name="DeviceKit" spec="2.1.0" />
-           <pod name="Firebase" spec=""/>
-           <pod name="Firebase/Core" spec=""/>
-           <pod name="Firebase/MLVision" spec="5.2.0"/>
-           <pod name="Firebase/MLVisionFaceModel" spec="5.2.0" />
-           <pod name="SVProgressHUD" spec="" />
-         </pods>
-       </podspec>
+		<framework src="Firebase/Core" type="podspec" spec=""/>
 		
-		
-		
-		
+			
 		<!--
       <podspec>
          <config>
