--- a/plugin.xml
+++ b/plugin.xml
@@ -61,8 +61,10 @@
 		<framework src="Firebase/MLVisionFaceModel" type="podspec" spec="5.2.0"/>
 		<framework src="Firebase/Core" type="podspec" spec=""/>
 	  -->
-
-		<dependency id="cordova-plugin-add-swift-support" spec="~1.7.2" />
+		
+		<preference name="UseLegacySwiftLanguageVersion" value="true" />
+      <preference name="UseSwiftLanguageVersion" value="4" />
+      <preference name="swift-version" value="4.2" />
 		 
 		  <!-- optionally set minimum ios version and enable use_frameworks! -->
         <pods-config ios-min-version="10.0" use-frameworks="true"/>
