--- a/plugin.xml
+++ b/plugin.xml
@@ -74,16 +74,16 @@
 		<pod id="Firebase/MLVision" version="5.2.0"/>
 		<pod id="Firebase/MLVisionFaceModel" version="5.2.0"/>
 	  -->
-		
+
 
 	  
-		   <pods-config ios-min-version="10.0" use-frameworks="true"/>
-	  
+		   <pods-config ios-min-version="10.0" use-frameworks="true"/>	  
 		<pod id="Alamofire" version="4.9.0"/>
 		<pod id="DeviceKit" version="2.1.0"/>
-        <pod id="Firebase/Core" />
-		<pod id="Firebase/MLVision" version="5.2.0"/>
-		<pod id="Firebase/MLVisionFaceModel" version="5.2.0"/>
+        <pod id="Firebase" version="6.21.0" />
+		 <pod id="SVProgressHUD" version="2.2.5" />
+		<pod id="FirebaseMLVision" version="0.19.0"/>
+		<pod id="FirebaseMLVisionFaceModel" version="0.19.0"/>
 
 		
 		
