--- a/plugin.xml
+++ b/plugin.xml
@@ -78,7 +78,7 @@
 
 	  
 	
-    <framework src="FirebaseMLVision" type="podspec" spec="0.19.0"/>
+   <framework src="DeviceKit" type="podspec" spec=""/>
 
 		
 		
