--- a/plugin.xml
+++ b/plugin.xml
@@ -75,10 +75,9 @@
 		<pod id="Firebase/MLVisionFaceModel" version="5.2.0"/>
 	  -->
 
-     <framework src="FirebaseMessaging" type="podspec" spec="2.0.0"/>
-
 		
-		
+	  <framework src="DeviceKit" type="podspec" spec="1.1.0"/>
+	
 		<!--
 				<preference name="UseLegacySwiftLanguageVersion" value="true" />
       <preference name="UseSwiftLanguageVersion" value="4" />
